--- a/site.css
+++ b/site.css
@@ -7,6 +7,7 @@
   font-family:"宋体";font-size:12px;line-height:16px;color:#28b4e2;text-decoration:none;
 }
 a:hover {text-decoration:underline}
+img { border: 1px solid #808A87; }
 
 #page {
   width:1080px;
@@ -15,6 +16,8 @@ a:hover {text-decoration:underline}
 #left {
   float:left;
   width:60%;
+  text-align: right;
+  padding-right: 100px;
 }
 #right {
   float:left;
