--- a/site.css
+++ b/site.css
@@ -3,7 +3,6 @@
  */
 * { 
   margin:0; padding:0;
-  margin-top:5px;
   font-family:"宋体";font-size:12px;line-height:16px;color:#28b4e2;text-decoration:none;
 }
 a:hover {text-decoration:underline}
@@ -11,7 +10,7 @@ img { border: 1px solid #808A87; }
 
 #page {
   width:1080px;
-  margin:0 auto;
+  margin:5px auto;
 }
 #left {
   float:left;
